infrastructure/environments/staging/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.42.1.51946",
      "templateHash": "18351020508870890620"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Azure region used for FAST STAGING resources."
      }
    },
    "namePrefix": {
      "type": "string",
      "metadata": {
        "description": "Naming prefix applied to all FAST resources."
      }
    },
    "vnetAddressSpace": {
      "type": "string",
      "metadata": {
        "description": "CIDR block for the FAST environment VNET."
      }
    },
    "subnetPrefixes": {
      "type": "object",
      "metadata": {
        "description": "Subnet prefixes for the Azure Firewall, AKS/service mesh, storage, and database tiers."
      }
    },
    "corpLanPrefixes": {
      "type": "array",
      "metadata": {
        "description": "Corporate LAN source ranges that can reach FAST UI and APIs."
      }
    },
    "onPremFabricPrefixes": {
      "type": "array",
      "metadata": {
        "description": "On-premise corporate fabric ranges that host the file transfer providers."
      }
    },
    "storageProviderPrefix": {
      "type": "string",
      "metadata": {
        "description": "Landing zone storage subnet/provider range."
      }
    },
    "databaseProviderPrefix": {
      "type": "string",
      "metadata": {
        "description": "Landing zone database subnet/provider range."
      }
    },
    "internetEgressFqdns": {
      "type": "array",
      "metadata": {
        "description": "FQDNs that FAST is allowed to reach on the public internet."
      }
    },
    "firewallPrivateIp": {
      "type": "string",
      "metadata": {
        "description": "Private IP address of the Azure Firewall used as next hop in the UDRs."
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "[format('{0}-networking', parameters('namePrefix'))]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "namePrefix": {
            "value": "[parameters('namePrefix')]"
          },
          "vnetAddressSpace": {
            "value": "[parameters('vnetAddressSpace')]"
          },
          "subnetPrefixes": {
            "value": "[parameters('subnetPrefixes')]"
          },
          "corpLanPrefixes": {
            "value": "[parameters('corpLanPrefixes')]"
          },
          "onPremFabricPrefixes": {
            "value": "[parameters('onPremFabricPrefixes')]"
          },
          "storageProviderPrefix": {
            "value": "[parameters('storageProviderPrefix')]"
          },
          "databaseProviderPrefix": {
            "value": "[parameters('databaseProviderPrefix')]"
          },
          "firewallPrivateIp": {
            "value": "[parameters('firewallPrivateIp')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.42.1.51946",
              "templateHash": "10277275016542867224"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "namePrefix": {
              "type": "string"
            },
            "vnetAddressSpace": {
              "type": "string"
            },
            "subnetPrefixes": {
              "type": "object"
            },
            "corpLanPrefixes": {
              "type": "array"
            },
            "onPremFabricPrefixes": {
              "type": "array"
            },
            "storageProviderPrefix": {
              "type": "string"
            },
            "databaseProviderPrefix": {
              "type": "string"
            },
            "firewallPrivateIp": {
              "type": "string"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Resources/deployments",
              "apiVersion": "2025-04-01",
              "name": "[format('{0}-mesh-nsg', parameters('namePrefix'))]",
              "properties": {
                "expressionEvaluationOptions": {
                  "scope": "inner"
                },
                "mode": "Incremental",
                "parameters": {
                  "nsgName": {
                    "value": "[format('{0}-nsg-mesh', parameters('namePrefix'))]"
                  },
                  "location": {
                    "value": "[parameters('location')]"
                  },
                  "securityRules": {
                    "value": [
                      {
                        "name": "Allow-Corporate-Inbound-Web",
                        "description": "Allow SAMPLE/DEMO corporate LAN access to the FAST UI and APIs via the service mesh ingress.",
                        "priority": 100,
                        "direction": "Inbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRanges": [
                          "80",
                          "443"
                        ],
                        "sourceAddressPrefixes": "[parameters('corpLanPrefixes')]",
                        "destinationAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]"
                      },
                      {
                        "name": "Allow-Mesh-To-Storage",
                        "description": "Allow FAST workloads to reach the dedicated landing zone storage endpoint.",
                        "priority": 200,
                        "direction": "Outbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                        "destinationAddressPrefix": "[parameters('storageProviderPrefix')]"
                      },
                      {
                        "name": "Allow-Mesh-To-Database",
                        "description": "Allow FAST workloads to reach PostgreSQL in the dedicated landing zone.",
                        "priority": 210,
                        "direction": "Outbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "5432",
                        "sourceAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                        "destinationAddressPrefix": "[parameters('databaseProviderPrefix')]"
                      },
                      {
                        "name": "Allow-Mesh-To-FileTransfer",
                        "description": "Allow HTTPS traffic from FAST to on-premise file transfer providers.",
                        "priority": 220,
                        "direction": "Outbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                        "destinationAddressPrefixes": "[parameters('onPremFabricPrefixes')]"
                      },
                      {
                        "name": "Allow-Mesh-To-Internet-SaaS",
                        "description": "Allow HTTPS egress to Microsoft Graph and SharePoint via the Azure Firewall.",
                        "priority": 230,
                        "direction": "Outbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                        "destinationAddressPrefix": "Internet"
                      }
                    ]
                  }
                },
                "template": {
                  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                  "contentVersion": "1.0.0.0",
                  "metadata": {
                    "_generator": {
                      "name": "bicep",
                      "version": "0.42.1.51946",
                      "templateHash": "8352499857246281018"
                    }
                  },
                  "parameters": {
                    "nsgName": {
                      "type": "string",
                      "metadata": {
                        "description": "Name of the Network Security Group to create."
                      }
                    },
                    "location": {
                      "type": "string",
                      "defaultValue": "[resourceGroup().location]",
                      "metadata": {
                        "description": "Azure region for the NSG."
                      }
                    },
                    "securityRules": {
                      "type": "array",
                      "metadata": {
                        "description": "Security rules to apply to the NSG. SAMPLE/DEMO values are expected from the environment wrappers."
                      }
                    }
                  },
                  "resources": [
                    {
                      "type": "Microsoft.Network/networkSecurityGroups",
                      "apiVersion": "2023-09-01",
                      "name": "[parameters('nsgName')]",
                      "location": "[parameters('location')]",
                      "properties": {
                        "copy": [
                          {
                            "name": "securityRules",
                            "count": "[length(parameters('securityRules'))]",
                            "input": {
                              "name": "[parameters('securityRules')[copyIndex('securityRules')].name]",
                              "properties": "[union(createObject('description', if(contains(parameters('securityRules')[copyIndex('securityRules')], 'description'), parameters('securityRules')[copyIndex('securityRules')].description, 'SAMPLE/DEMO NSG rule for FAST'), 'priority', parameters('securityRules')[copyIndex('securityRules')].priority, 'direction', parameters('securityRules')[copyIndex('securityRules')].direction, 'access', parameters('securityRules')[copyIndex('securityRules')].access,  [...]
                            }
                          }
                        ]
                      }
                    }
                  ],
                  "outputs": {
                    "nsgId": {
                      "type": "string",
                      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                    },
                    "nsgName": {
                      "type": "string",
                      "value": "[parameters('nsgName')]"
                    }
                  }
                }
              }
            },
            {
              "type": "Microsoft.Resources/deployments",
              "apiVersion": "2025-04-01",
              "name": "[format('{0}-storage-nsg', parameters('namePrefix'))]",
              "properties": {
                "expressionEvaluationOptions": {
                  "scope": "inner"
                },
                "mode": "Incremental",
                "parameters": {
                  "nsgName": {
                    "value": "[format('{0}-nsg-storage', parameters('namePrefix'))]"
                  },
                  "location": {
                    "value": "[parameters('location')]"
                  },
                  "securityRules": {
                    "value": [
                      {
                        "name": "Allow-ServiceMesh-To-Storage",
                        "description": "Allow FAST service mesh workloads to reach the storage integration subnet over HTTPS.",
                        "priority": 100,
                        "direction": "Inbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "443",
                        "sourceAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                        "destinationAddressPrefix": "[parameters('subnetPrefixes').storage]"
                      }
                    ]
                  }
                },
                "template": {
                  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                  "contentVersion": "1.0.0.0",
                  "metadata": {
                    "_generator": {
                      "name": "bicep",
                      "version": "0.42.1.51946",
                      "templateHash": "8352499857246281018"
                    }
                  },
                  "parameters": {
                    "nsgName": {
                      "type": "string",
                      "metadata": {
                        "description": "Name of the Network Security Group to create."
                      }
                    },
                    "location": {
                      "type": "string",
                      "defaultValue": "[resourceGroup().location]",
                      "metadata": {
                        "description": "Azure region for the NSG."
                      }
                    },
                    "securityRules": {
                      "type": "array",
                      "metadata": {
                        "description": "Security rules to apply to the NSG. SAMPLE/DEMO values are expected from the environment wrappers."
                      }
                    }
                  },
                  "resources": [
                    {
                      "type": "Microsoft.Network/networkSecurityGroups",
                      "apiVersion": "2023-09-01",
                      "name": "[parameters('nsgName')]",
                      "location": "[parameters('location')]",
                      "properties": {
                        "copy": [
                          {
                            "name": "securityRules",
                            "count": "[length(parameters('securityRules'))]",
                            "input": {
                              "name": "[parameters('securityRules')[copyIndex('securityRules')].name]",
                              "properties": "[union(createObject('description', if(contains(parameters('securityRules')[copyIndex('securityRules')], 'description'), parameters('securityRules')[copyIndex('securityRules')].description, 'SAMPLE/DEMO NSG rule for FAST'), 'priority', parameters('securityRules')[copyIndex('securityRules')].priority, 'direction', parameters('securityRules')[copyIndex('securityRules')].direction, 'access', parameters('securityRules')[copyIndex('securityRules')].access,  [...]
                            }
                          }
                        ]
                      }
                    }
                  ],
                  "outputs": {
                    "nsgId": {
                      "type": "string",
                      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                    },
                    "nsgName": {
                      "type": "string",
                      "value": "[parameters('nsgName')]"
                    }
                  }
                }
              }
            },
            {
              "type": "Microsoft.Resources/deployments",
              "apiVersion": "2025-04-01",
              "name": "[format('{0}-database-nsg', parameters('namePrefix'))]",
              "properties": {
                "expressionEvaluationOptions": {
                  "scope": "inner"
                },
                "mode": "Incremental",
                "parameters": {
                  "nsgName": {
                    "value": "[format('{0}-nsg-database', parameters('namePrefix'))]"
                  },
                  "location": {
                    "value": "[parameters('location')]"
                  },
                  "securityRules": {
                    "value": [
                      {
                        "name": "Allow-ServiceMesh-To-PostgreSql",
                        "description": "Allow FAST workloads to access PostgreSQL over TCP/5432.",
                        "priority": 100,
                        "direction": "Inbound",
                        "access": "Allow",
                        "protocol": "Tcp",
                        "sourcePortRange": "*",
                        "destinationPortRange": "5432",
                        "sourceAddressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                        "destinationAddressPrefix": "[parameters('subnetPrefixes').database]"
                      }
                    ]
                  }
                },
                "template": {
                  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                  "contentVersion": "1.0.0.0",
                  "metadata": {
                    "_generator": {
                      "name": "bicep",
                      "version": "0.42.1.51946",
                      "templateHash": "8352499857246281018"
                    }
                  },
                  "parameters": {
                    "nsgName": {
                      "type": "string",
                      "metadata": {
                        "description": "Name of the Network Security Group to create."
                      }
                    },
                    "location": {
                      "type": "string",
                      "defaultValue": "[resourceGroup().location]",
                      "metadata": {
                        "description": "Azure region for the NSG."
                      }
                    },
                    "securityRules": {
                      "type": "array",
                      "metadata": {
                        "description": "Security rules to apply to the NSG. SAMPLE/DEMO values are expected from the environment wrappers."
                      }
                    }
                  },
                  "resources": [
                    {
                      "type": "Microsoft.Network/networkSecurityGroups",
                      "apiVersion": "2023-09-01",
                      "name": "[parameters('nsgName')]",
                      "location": "[parameters('location')]",
                      "properties": {
                        "copy": [
                          {
                            "name": "securityRules",
                            "count": "[length(parameters('securityRules'))]",
                            "input": {
                              "name": "[parameters('securityRules')[copyIndex('securityRules')].name]",
                              "properties": "[union(createObject('description', if(contains(parameters('securityRules')[copyIndex('securityRules')], 'description'), parameters('securityRules')[copyIndex('securityRules')].description, 'SAMPLE/DEMO NSG rule for FAST'), 'priority', parameters('securityRules')[copyIndex('securityRules')].priority, 'direction', parameters('securityRules')[copyIndex('securityRules')].direction, 'access', parameters('securityRules')[copyIndex('securityRules')].access,  [...]
                            }
                          }
                        ]
                      }
                    }
                  ],
                  "outputs": {
                    "nsgId": {
                      "type": "string",
                      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
                    },
                    "nsgName": {
                      "type": "string",
                      "value": "[parameters('nsgName')]"
                    }
                  }
                }
              }
            },
            {
              "type": "Microsoft.Resources/deployments",
              "apiVersion": "2025-04-01",
              "name": "[format('{0}-vnet', parameters('namePrefix'))]",
              "properties": {
                "expressionEvaluationOptions": {
                  "scope": "inner"
                },
                "mode": "Incremental",
                "parameters": {
                  "vnetName": {
                    "value": "[format('{0}-vnet', parameters('namePrefix'))]"
                  },
                  "location": {
                    "value": "[parameters('location')]"
                  },
                  "addressSpace": {
                    "value": "[parameters('vnetAddressSpace')]"
                  },
                  "subnets": {
                    "value": [
                      {
                        "name": "AzureFirewallSubnet",
                        "properties": {
                          "addressPrefix": "[parameters('subnetPrefixes').firewall]"
                        }
                      },
                      {
                        "name": "snet-aks-mesh",
                        "properties": {
                          "addressPrefix": "[parameters('subnetPrefixes').serviceMesh]",
                          "networkSecurityGroup": {
                            "id": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-mesh-nsg', parameters('namePrefix'))), '2025-04-01').outputs.nsgId.value]"
                          },
                          "routeTable": {
                            "id": "[resourceId('Microsoft.Network/routeTables', format('{0}-rt-mesh', parameters('namePrefix')))]"
                          },
                          "serviceEndpoints": [
                            {
                              "service": "Microsoft.Storage"
                            },
                            {
                              "service": "Microsoft.KeyVault"
                            }
                          ]
                        }
                      },
                      {
                        "name": "snet-storage-integration",
                        "properties": {
                          "addressPrefix": "[parameters('subnetPrefixes').storage]",
                          "networkSecurityGroup": {
                            "id": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-storage-nsg', parameters('namePrefix'))), '2025-04-01').outputs.nsgId.value]"
                          },
                          "routeTable": {
                            "id": "[resourceId('Microsoft.Network/routeTables', format('{0}-rt-mesh', parameters('namePrefix')))]"
                          },
                          "serviceEndpoints": [
                            {
                              "service": "Microsoft.Storage"
                            }
                          ]
                        }
                      },
                      {
                        "name": "snet-database-integration",
                        "properties": {
                          "addressPrefix": "[parameters('subnetPrefixes').database]",
                          "networkSecurityGroup": {
                            "id": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-database-nsg', parameters('namePrefix'))), '2025-04-01').outputs.nsgId.value]"
                          },
                          "routeTable": {
                            "id": "[resourceId('Microsoft.Network/routeTables', format('{0}-rt-mesh', parameters('namePrefix')))]"
                          }
                        }
                      }
                    ]
                  },
                  "routeTables": {
                    "value": [
                      {
                        "name": "[format('{0}-rt-mesh', parameters('namePrefix'))]",
                        "properties": {
                          "disableBgpRoutePropagation": false,
                          "routes": [
                            {
                              "name": "to-fast-storage",
                              "properties": {
                                "addressPrefix": "[parameters('storageProviderPrefix')]",
                                "nextHopType": "VirtualAppliance",
                                "nextHopIpAddress": "[parameters('firewallPrivateIp')]"
                              }
                            },
                            {
                              "name": "to-fast-database",
                              "properties": {
                                "addressPrefix": "[parameters('databaseProviderPrefix')]",
                                "nextHopType": "VirtualAppliance",
                                "nextHopIpAddress": "[parameters('firewallPrivateIp')]"
                              }
                            },
                            {
                              "name": "to-corporate-lan",
                              "properties": {
                                "addressPrefix": "[parameters('corpLanPrefixes')[0]]",
                                "nextHopType": "VirtualAppliance",
                                "nextHopIpAddress": "[parameters('firewallPrivateIp')]"
                              }
                            },
                            {
                              "name": "to-onprem-file-transfer",
                              "properties": {
                                "addressPrefix": "[parameters('onPremFabricPrefixes')[0]]",
                                "nextHopType": "VirtualAppliance",
                                "nextHopIpAddress": "[parameters('firewallPrivateIp')]"
                              }
                            },
                            {
                              "name": "default-egress-via-firewall",
                              "properties": {
                                "addressPrefix": "0.0.0.0/0",
                                "nextHopType": "VirtualAppliance",
                                "nextHopIpAddress": "[parameters('firewallPrivateIp')]"
                              }
                            }
                          ]
                        }
                      }
                    ]
                  }
                },
                "template": {
                  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                  "contentVersion": "1.0.0.0",
                  "metadata": {
                    "_generator": {
                      "name": "bicep",
                      "version": "0.42.1.51946",
                      "templateHash": "15494059103586251070"
                    }
                  },
                  "parameters": {
                    "vnetName": {
                      "type": "string",
                      "metadata": {
                        "description": "Name of the virtual network."
                      }
                    },
                    "location": {
                      "type": "string",
                      "defaultValue": "[resourceGroup().location]",
                      "metadata": {
                        "description": "Azure region for all networking resources."
                      }
                    },
                    "addressSpace": {
                      "type": "string",
                      "metadata": {
                        "description": "Primary address space for the virtual network."
                      }
                    },
                    "dnsServers": {
                      "type": "array",
                      "defaultValue": [],
                      "metadata": {
                        "description": "Optional custom DNS servers for the VNET."
                      }
                    },
                    "subnets": {
                      "type": "array",
                      "metadata": {
                        "description": "Subnet resources already shaped for the Microsoft.Network virtualNetworks API."
                      }
                    },
                    "routeTables": {
                      "type": "array",
                      "defaultValue": [],
                      "metadata": {
                        "description": "Route table resources already shaped for the Microsoft.Network routeTables API."
                      }
                    }
                  },
                  "resources": [
                    {
                      "copy": {
                        "name": "routeTableResources",
                        "count": "[length(parameters('routeTables'))]"
                      },
                      "type": "Microsoft.Network/routeTables",
                      "apiVersion": "2023-09-01",
                      "name": "[parameters('routeTables')[copyIndex()].name]",
                      "location": "[parameters('location')]",
                      "properties": "[parameters('routeTables')[copyIndex()].properties]"
                    },
                    {
                      "type": "Microsoft.Network/virtualNetworks",
                      "apiVersion": "2023-09-01",
                      "name": "[parameters('vnetName')]",
                      "location": "[parameters('location')]",
                      "properties": "[union(createObject('addressSpace', createObject('addressPrefixes', createArray(parameters('addressSpace'))), 'subnets', parameters('subnets')), if(greater(length(parameters('dnsServers')), 0), createObject('dhcpOptions', createObject('dnsServers', parameters('dnsServers'))), createObject()))]"
                    }
                  ],
                  "outputs": {
                    "vnetId": {
                      "type": "string",
                      "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
                    },
                    "subnetResourceIds": {
                      "type": "array",
                      "copy": {
                        "count": "[length(parameters('subnets'))]",
                        "input": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnets')[copyIndex()].name)]"
                      }
                    },
                    "routeTableNames": {
                      "type": "array",
                      "copy": {
                        "count": "[length(parameters('routeTables'))]",
                        "input": "[parameters('routeTables')[copyIndex()].name]"
                      }
                    }
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Resources/deployments', format('{0}-database-nsg', parameters('namePrefix')))]",
                "[resourceId('Microsoft.Resources/deployments', format('{0}-mesh-nsg', parameters('namePrefix')))]",
                "[resourceId('Microsoft.Resources/deployments', format('{0}-storage-nsg', parameters('namePrefix')))]"
              ]
            }
          ],
          "outputs": {
            "vnetId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-vnet', parameters('namePrefix'))), '2025-04-01').outputs.vnetId.value]"
            },
            "meshNsgId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-mesh-nsg', parameters('namePrefix'))), '2025-04-01').outputs.nsgId.value]"
            },
            "storageNsgId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-storage-nsg', parameters('namePrefix'))), '2025-04-01').outputs.nsgId.value]"
            },
            "databaseNsgId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-database-nsg', parameters('namePrefix'))), '2025-04-01').outputs.nsgId.value]"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "[format('{0}-firewall', parameters('namePrefix'))]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "namePrefix": {
            "value": "[parameters('namePrefix')]"
          },
          "corpLanPrefixes": {
            "value": "[parameters('corpLanPrefixes')]"
          },
          "onPremFabricPrefixes": {
            "value": "[parameters('onPremFabricPrefixes')]"
          },
          "storageProviderPrefix": {
            "value": "[parameters('storageProviderPrefix')]"
          },
          "databaseProviderPrefix": {
            "value": "[parameters('databaseProviderPrefix')]"
          },
          "serviceMeshSubnetPrefix": {
            "value": "[parameters('subnetPrefixes').serviceMesh]"
          },
          "internetEgressFqdns": {
            "value": "[parameters('internetEgressFqdns')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.42.1.51946",
              "templateHash": "15913651802277173835"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "[resourceGroup().location]"
            },
            "namePrefix": {
              "type": "string"
            },
            "corpLanPrefixes": {
              "type": "array"
            },
            "onPremFabricPrefixes": {
              "type": "array"
            },
            "storageProviderPrefix": {
              "type": "string"
            },
            "databaseProviderPrefix": {
              "type": "string"
            },
            "serviceMeshSubnetPrefix": {
              "type": "string"
            },
            "internetEgressFqdns": {
              "type": "array"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Resources/deployments",
              "apiVersion": "2025-04-01",
              "name": "[format('{0}-firewall-policy', parameters('namePrefix'))]",
              "properties": {
                "expressionEvaluationOptions": {
                  "scope": "inner"
                },
                "mode": "Incremental",
                "parameters": {
                  "firewallPolicyName": {
                    "value": "[format('{0}-afw-policy', parameters('namePrefix'))]"
                  },
                  "ruleCollectionGroupName": {
                    "value": "[format('{0}-fast-rcg', parameters('namePrefix'))]"
                  },
                  "location": {
                    "value": "[parameters('location')]"
                  },
                  "networkRuleCollections": {
                    "value": [
                      {
                        "name": "fast-private-connectivity",
                        "priority": 100,
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                          "type": "Allow"
                        },
                        "rules": [
                          {
                            "name": "mesh-to-storage",
                            "ruleType": "NetworkRule",
                            "ipProtocols": [
                              "TCP"
                            ],
                            "sourceAddresses": [
                              "[parameters('serviceMeshSubnetPrefix')]"
                            ],
                            "destinationAddresses": [
                              "[parameters('storageProviderPrefix')]"
                            ],
                            "destinationPorts": [
                              "443"
                            ]
                          },
                          {
                            "name": "mesh-to-postgresql",
                            "ruleType": "NetworkRule",
                            "ipProtocols": [
                              "TCP"
                            ],
                            "sourceAddresses": [
                              "[parameters('serviceMeshSubnetPrefix')]"
                            ],
                            "destinationAddresses": [
                              "[parameters('databaseProviderPrefix')]"
                            ],
                            "destinationPorts": [
                              "5432"
                            ]
                          }
                        ]
                      },
                      {
                        "name": "fast-corporate-ingress",
                        "priority": 200,
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                          "type": "Allow"
                        },
                        "rules": [
                          {
                            "name": "corporate-to-ui-and-apis",
                            "ruleType": "NetworkRule",
                            "ipProtocols": [
                              "TCP"
                            ],
                            "sourceAddresses": "[parameters('corpLanPrefixes')]",
                            "destinationAddresses": [
                              "[parameters('serviceMeshSubnetPrefix')]"
                            ],
                            "destinationPorts": [
                              "80",
                              "443"
                            ]
                          }
                        ]
                      },
                      {
                        "name": "fast-file-transfer",
                        "priority": 300,
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                          "type": "Allow"
                        },
                        "rules": [
                          {
                            "name": "mesh-to-onprem-file-transfer",
                            "ruleType": "NetworkRule",
                            "ipProtocols": [
                              "TCP"
                            ],
                            "sourceAddresses": [
                              "[parameters('serviceMeshSubnetPrefix')]"
                            ],
                            "destinationAddresses": "[parameters('onPremFabricPrefixes')]",
                            "destinationPorts": [
                              "443"
                            ]
                          }
                        ]
                      }
                    ]
                  },
                  "applicationRuleCollections": {
                    "value": [
                      {
                        "name": "fast-internet-egress",
                        "priority": 400,
                        "ruleCollectionType": "FirewallPolicyFilterRuleCollection",
                        "action": {
                          "type": "Allow"
                        },
                        "rules": [
                          {
                            "name": "mesh-to-m365-and-sharepoint",
                            "ruleType": "ApplicationRule",
                            "sourceAddresses": [
                              "[parameters('serviceMeshSubnetPrefix')]"
                            ],
                            "targetFqdns": "[parameters('internetEgressFqdns')]",
                            "terminateTLS": false,
                            "protocols": [
                              {
                                "protocolType": "Https",
                                "port": 443
                              }
                            ]
                          }
                        ]
                      }
                    ]
                  }
                },
                "template": {
                  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                  "contentVersion": "1.0.0.0",
                  "metadata": {
                    "_generator": {
                      "name": "bicep",
                      "version": "0.42.1.51946",
                      "templateHash": "8734701051543743620"
                    }
                  },
                  "parameters": {
                    "firewallPolicyName": {
                      "type": "string",
                      "metadata": {
                        "description": "Name of the Azure Firewall Policy to create."
                      }
                    },
                    "location": {
                      "type": "string",
                      "defaultValue": "[resourceGroup().location]",
                      "metadata": {
                        "description": "Azure region for the firewall policy resources."
                      }
                    },
                    "ruleCollectionGroupName": {
                      "type": "string",
                      "defaultValue": "[format('{0}-rcg', parameters('firewallPolicyName'))]",
                      "metadata": {
                        "description": "Rule collection group name that contains the FAST connectivity rules."
                      }
                    },
                    "networkRuleCollections": {
                      "type": "array",
                      "defaultValue": [],
                      "metadata": {
                        "description": "Network rule collections already shaped for the firewall policy rule collection group resource."
                      }
                    },
                    "applicationRuleCollections": {
                      "type": "array",
                      "defaultValue": [],
                      "metadata": {
                        "description": "Application rule collections already shaped for the firewall policy rule collection group resource."
                      }
                    }
                  },
                  "resources": [
                    {
                      "type": "Microsoft.Network/firewallPolicies",
                      "apiVersion": "2023-09-01",
                      "name": "[parameters('firewallPolicyName')]",
                      "location": "[parameters('location')]",
                      "properties": {
                        "sku": {
                          "tier": "Standard"
                        },
                        "threatIntelMode": "Alert"
                      }
                    },
                    {
                      "type": "Microsoft.Network/firewallPolicies/ruleCollectionGroups",
                      "apiVersion": "2023-09-01",
                      "name": "[format('{0}/{1}', parameters('firewallPolicyName'), parameters('ruleCollectionGroupName'))]",
                      "properties": {
                        "priority": 200,
                        "ruleCollections": "[concat(parameters('networkRuleCollections'), parameters('applicationRuleCollections'))]"
                      },
                      "dependsOn": [
                        "[resourceId('Microsoft.Network/firewallPolicies', parameters('firewallPolicyName'))]"
                      ]
                    }
                  ],
                  "outputs": {
                    "firewallPolicyId": {
                      "type": "string",
                      "value": "[resourceId('Microsoft.Network/firewallPolicies', parameters('firewallPolicyName'))]"
                    },
                    "ruleCollectionGroupId": {
                      "type": "string",
                      "value": "[resourceId('Microsoft.Network/firewallPolicies/ruleCollectionGroups', parameters('firewallPolicyName'), parameters('ruleCollectionGroupName'))]"
                    }
                  }
                }
              }
            }
          ],
          "outputs": {
            "firewallPolicyId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-firewall-policy', parameters('namePrefix'))), '2025-04-01').outputs.firewallPolicyId.value]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', format('{0}-networking', parameters('namePrefix')))]"
      ]
    }
  ],
  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-networking', parameters('namePrefix'))), '2025-04-01').outputs.vnetId.value]"
    },
    "firewallPolicyId": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', format('{0}-firewall', parameters('namePrefix'))), '2025-04-01').outputs.firewallPolicyId.value]"
    }
  }
}
